fixed clipboard bug and image stretching

--- a/app/assets/stylesheets/profile-card.css
+++ b/app/assets/stylesheets/profile-card.css
@@ -69,6 +69,7 @@
   }
 
 .card-profile-picture-enlarged{
+  object-fit: cover;
   width: 10rem;
   height: 10rem;
   margin-top: 0.5rem;
